# VertexVoyage

./: .gitignore  README.md  Rad.odt  pipeline.yml  proposal.tex  refs.bib  requirements.txt  run_experiments.sh  run_experiments_temporal.sh  setup.py  temporal_fine_tuning.sh
client/: __main__.py  methods.py
doc/: refs.bib
doc/Seminar1/: paper.md  (+1 more)
docker/: Dockerfile  build.sh  docker-compose.yml  zoo.cfg
examples/: word2vec.py
experiments/: datasets.py  embedding.py  embeddings.py  forest_fire_benchmark.py  label_propagation_benchmark.py  lfm_data_profile.py  speedup.py  temporal_label_propagation.py  test.py  utils.py  windowed_label_propagation.py
notebooks/: analyze_embeddings.ipynb  sigmoid.ipynb  sklearn-eval.ipynb
official/: Obrazac 1. Prijava teme master rada.docx
pipelines/: davis_southern_women.gml  davis_southern_women.yml  florentine_families.gml  florentine_families.yml  les_miserables.gml  les_miserables.yml  sbm.yml  twitch.yml  zachary.yml
plugins/: kafka.py  simulator.py
presentation/: presentation.tex
scripts/: analysis.sh  detect_function_calls.py  generate_docs.sh  run_experiments.sh
vertex_voyage/: __init__.py  __main__.py  benchmark.py  benchmark_base.py  cli.py  cluster.py  config.py  data.py  data_source.py  distger.py  dynnode2vec.py  grid_search.py  model.py  node2vec.py  partitioning.py  persist.py  reconstruction.py  simulation.py  stats.py  temporal.py  temporal_partitioning.py  utils.py  vv_graph.py  word2vec.py
vertex_voyage_native/: Cargo.toml  pyproject.toml
vertex_voyage_native/src/: lib.rs
zk/: run_server.sh
(+64 files in other folders)
