[package]
name = "vertex_voyage_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vertex_voyage_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
rand = "0.9.0"
rand_chacha = "0.3"
ndarray = "0.15.6"
numpy = "*"
rayon = "1.10"
num_cpus = "1.16.0"

[lints.rust]
unused_imports = "allow"
deprecated = "allow"
unused_variables = "allow"
non_snake_case = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"